# piranha

./: CMakeLists.txt  deploy.py  gpu_utilization_log.csv  monitor_gpu.py  run.sh  run_gpu_monitored.sh
configs/: alexnet_cifar10.json  alexnet_cifar10_speedrun.json  alexnet_imagenet.json  all_conv.json  all_relu.json  lenet_mnist.json  lenet_mnist_3split.json  lenet_mnist_ln.json  sarda_mnist.json  secureml_mnist.json  vgg16_cifar10.json  vgg_cifar10.json  vgg_imagenet.json
files/TINY_IMAGENET/: .gitignore  data_status.py  test-data.py
files/models/: alexnet-cifar10-ours.json  alexnet-imagenet-ours.json  full-conv-cifar10.json  full-relu-cifar10.json  vgg16-cifar10-ln.json  vgg16-imagenet.json
scripts/: download_tinyimageney.py
src/: main.cu
